--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,12 @@ twitter_username: BitsandBytes18
 github_username: jekyll
 
 # Build settings
-theme: minima
 plugins:
   - jekyll-feed
 destination: docs
 keep_files: [CNAME]
+sass:
+  sass_dir: _sass
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
